# pico_template

./: CMakeLists.txt  Makefile  commands.txt
.cache/clangd/index/: main.c.A2520DB97A01DD75.idx
src/: main.c
